chore: 移除 JDK 25 预览特性依赖
- 删除 PrimitivePatterns.java（依赖预览的基元模式，非预览部分与
  PatternMatching.java 重复）
- StructuredConcurrency.java 改用稳定的 ExecutorService + 虚拟线程
  执行器演示结构化并发思想，删除 StructuredTaskScope 预览代码与
  --enable-preview 编译指令
- README 同步：移除预览编译说明、删 PrimitivePatterns 行并重排序号、
  JEP 速览表裁剪为仅稳定特性
- .gitignore 忽略 IntelliJ 编译输出 out/

全部示例现可用 javac --release 25 直接编译运行，无需预览标志。

Co-Authored-By: Claude <noreply@anthropic.com>